tests/http/snapshots/http__legacy_logs__user_redirects_to_latest_month.snap
---
source: tests/http/legacy_logs.rs
expression: "get(\"/channelid/11111/userid/22222\").send().await"
---
GET /channelid/11111/userid/22222
status: 303 See Other
location: /channelid/11111/userid/22222/2026/3
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
